Fix content overlapping header on unauthenticated routes

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -5,8 +5,10 @@
   -o-transition: margin-left 0.2s ease-in-out;
   transition: margin-left 0.2s ease-in-out;
 }
-.main-container {
+.page-content {
   margin-top: 77px;
+}
+.main-container {
   margin-left: 235px;
   padding: 15px;
   -ms-overflow-x: hidden;
